// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generates the correct tree given a single word 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [
                    WordTrie {
                      "children": [],
                      "isWord": true,
                      "value": "t",
                    },
                  ],
                  "isWord": false,
                  "value": "a",
                },
              ],
              "isWord": false,
              "value": "e",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "g",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates a single node correctly 1`] = `
WordTrie {
  "children": [],
  "isWord": false,
  "value": "a",
}
`;

exports[`generates the correct tree given multiple words 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "d",
            },
          ],
          "isWord": false,
          "value": "e",
        },
      ],
      "isWord": false,
      "value": "r",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [],
                  "isWord": true,
                  "value": "e",
                },
              ],
              "isWord": false,
              "value": "e",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "t",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "r",
            },
          ],
          "isWord": false,
          "value": "a",
        },
      ],
      "isWord": false,
      "value": "f",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates the correct tree given multiple words that do not connect 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "d",
            },
          ],
          "isWord": false,
          "value": "e",
        },
      ],
      "isWord": false,
      "value": "r",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [],
                  "isWord": true,
                  "value": "e",
                },
              ],
              "isWord": false,
              "value": "e",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "t",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "r",
            },
          ],
          "isWord": false,
          "value": "a",
        },
      ],
      "isWord": false,
      "value": "f",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates the correct tree given multiple words that do NOT connect 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "d",
            },
          ],
          "isWord": false,
          "value": "e",
        },
      ],
      "isWord": false,
      "value": "r",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [],
                  "isWord": true,
                  "value": "e",
                },
              ],
              "isWord": false,
              "value": "e",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "t",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "r",
            },
          ],
          "isWord": false,
          "value": "a",
        },
      ],
      "isWord": false,
      "value": "f",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates the correct tree given multiple words that do connect 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [
                    WordTrie {
                      "children": [],
                      "isWord": true,
                      "value": "t",
                    },
                  ],
                  "isWord": false,
                  "value": "a",
                },
              ],
              "isWord": false,
              "value": "e",
            },
            WordTrie {
              "children": [
                WordTrie {
                  "children": [
                    WordTrie {
                      "children": [
                        WordTrie {
                          "children": [
                            WordTrie {
                              "children": [],
                              "isWord": true,
                              "value": "r",
                            },
                          ],
                          "isWord": false,
                          "value": "e",
                        },
                      ],
                      "isWord": true,
                      "value": "l",
                    },
                  ],
                  "isWord": false,
                  "value": "w",
                },
              ],
              "isWord": false,
              "value": "o",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "g",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates the correct trie given a single word 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [
                    WordTrie {
                      "children": [],
                      "isWord": true,
                      "value": "t",
                    },
                  ],
                  "isWord": false,
                  "value": "a",
                },
              ],
              "isWord": false,
              "value": "e",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "g",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates the correct trie given multiple words that do not connect 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "d",
            },
          ],
          "isWord": false,
          "value": "e",
        },
      ],
      "isWord": false,
      "value": "r",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [],
                  "isWord": true,
                  "value": "e",
                },
              ],
              "isWord": false,
              "value": "e",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "t",
    },
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [],
              "isWord": true,
              "value": "r",
            },
          ],
          "isWord": false,
          "value": "a",
        },
      ],
      "isWord": false,
      "value": "f",
    },
  ],
  "isWord": false,
  "value": "",
}
`;

exports[`generates the correct trie given multiple words that do connect 1`] = `
WordTrie {
  "children": [
    WordTrie {
      "children": [
        WordTrie {
          "children": [
            WordTrie {
              "children": [
                WordTrie {
                  "children": [
                    WordTrie {
                      "children": [],
                      "isWord": true,
                      "value": "t",
                    },
                  ],
                  "isWord": false,
                  "value": "a",
                },
              ],
              "isWord": false,
              "value": "e",
            },
            WordTrie {
              "children": [
                WordTrie {
                  "children": [
                    WordTrie {
                      "children": [
                        WordTrie {
                          "children": [
                            WordTrie {
                              "children": [],
                              "isWord": true,
                              "value": "r",
                            },
                          ],
                          "isWord": false,
                          "value": "e",
                        },
                      ],
                      "isWord": true,
                      "value": "l",
                    },
                  ],
                  "isWord": false,
                  "value": "w",
                },
              ],
              "isWord": false,
              "value": "o",
            },
          ],
          "isWord": false,
          "value": "r",
        },
      ],
      "isWord": false,
      "value": "g",
    },
  ],
  "isWord": false,
  "value": "",
}
`;
